license details updated